--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -53,4 +53,7 @@
     .login-orange-bg{
         background-image: url("/images/login-bg.svg")
     }
+    .pallete-color-3{
+        color: #EAF0F7;
+    }
 }
