--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,8 +18,11 @@
         width: 1rem;
         height: 0.25rem;
         background: #E05534;
-        margin: auto;
+        position: absolute;
         border-radius: 1rem;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
     .nav:hover + .nav-line-hidden{
         background: #E05534;
@@ -32,8 +35,11 @@
         width: 1rem;
         height: 0.25rem;
         background: white;
-        margin: auto;
         border-radius: 1rem;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
     .amiko {
         font-family: 'Poppins', sans-serif;
@@ -55,5 +61,11 @@
     }
     .pallete-color-3{
         color: #EAF0F7;
+    }
+    .button-color{
+        background-color: #E05534
+    }
+    .button-color:hover{
+        background-color: #112B3C
     }
 }
