--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,5 +5,5 @@ $body-bg: #f8fafc;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
-$first-palette: #E05534;
+$first-palette: #FE8D2A;
 $second-palette: #112B3C;
